--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <script: src ="index.js"></script>
+    </head>
     <body>
-        <h1>Welcomee to Flatburger</h1>
+        <h1>Welcome to Flatburger!</h1>
     </body>
 </html>
