added more stuff

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Welcome to Flatburger!</h1>
+        <h2>Here are the burgers thats are available!</h2>
+        <ul id="burgers-list></ul>
     </body>
 </html>
